--- a/static/data/i18n/en-US.json
+++ b/static/data/i18n/en-US.json
@@ -1,1 +1,50 @@
-{"common":{"hint":"Hint","ok":"Ok","cancel":"Cancel","loading":"Loading...","sending":"Sending...","iam":"I am"},"menu":{"goToFoo":"Goto Foo","goToBar":"Goto Bar"},"components":{"index":{"welcome":"Welcome"}},"views":{"404":{"name":"404","message":"The page you visited is not found"},"home":{"name":"home"},"demo":{"bar":{"name":"Bar"},"foo":{"name":"Foo","defaultBtn":"Default button","primaryBtn":"Primary button","textBtn":"Text button","touchMe":"Touch me!","submitForm":"Submit form: {msg}"}}}}
+{
+    "common": {
+        "hint": "Hint",
+        "ok": "Ok",
+        "cancel": "Cancel",
+        "loading": "Loading...",
+        "sending": "Sending...",
+        "iam": "I am"
+    },
+    "menu": {
+        "goToFoo": "Goto Foo",
+        "goToBar": "Goto Bar"
+    },
+    "components": {
+        "frame": {
+            "title": "Management system"
+        }
+    },
+    "views": {
+        "404": {
+            "name": "404",
+            "message": "The page you visited is not found"
+        },
+        "home": {
+            "name": "home"
+        },
+        "login": {
+            "name": "Login",
+            "title": "Management system",
+            "userName": "User name",
+            "password": "Password",
+            "login": "Login",
+            "userNameNotEmpty": "The user name cannot be empty",
+            "passwordNotEmpty": "The password cannot be empty"
+        },
+        "demo": {
+            "bar": {
+                "name": "Bar"
+            },
+            "foo": {
+                "name": "Foo",
+                "defaultBtn": "Default button",
+                "primaryBtn": "Primary button",
+                "textBtn": "Text button",
+                "touchMe": "Touch me!",
+                "submitForm": "Submit form: {msg}"
+            }
+        }
+    }
+}
